<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:background="@color/colorWhite"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:gravity="start"
                  android:id="@+id/ll_back"
                  android:background="@color/colorPrimary"
                  android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_navigate_back"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_question"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content">

        <TextView android:layout_width="match_parent"
                  android:textColor="@android:color/white"
                  android:layout_marginBottom="@dimen/margin_xxlarge"
                  android:textSize="@dimen/text_xxlarge"
                  android:gravity="center_horizontal"
                  android:layout_marginStart="@dimen/margin_large"
                  android:background="@color/colorPrimary"
                  android:text="@string/need_to_improve_routing"
                  android:layout_height="wrap_content"
        />
    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:layout_gravity="center"
              android:textAllCaps="true"
              android:textColor="@android:color/black"
              android:textSize="@dimen/text_xx_xlarge"
              android:fontFamily="@string/ft_bold_font"
              android:text="@string/thank_you_for_your_input"/>

</LinearLayout>
