<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_normal">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_navigate_back" />

            <LinearLayout
                android:id="@+id/ll_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/frutiger_lt_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/options"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_xxlarge" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_question_correct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:fontFamily="@font/frutiger_lt_bold"
            android:gravity="start"
            android:padding="@dimen/padding_normal"
            android:text="@string/what_information_do_you_have_for_community"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_xxlarge"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txv_title_community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:fontFamily="@font/frutiger_lt_bold"
            android:gravity="start"
            android:padding="@dimen/padding_normal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_xxlarge"
            android:textStyle="bold"
            tools:text="@string/surface_type" />
    </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadeScrollbars="false"
            android:padding="@dimen/padding_large"
            android:scrollbars="vertical" />

        <RelativeLayout
            android:id="@+id/rel_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large"
            android:visibility="gone">

            <TextView
                android:id="@+id/txv_width_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/frutiger_lt_bold"
                android:text="@string/other_value"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_xlarge"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/img_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingBottom="@dimen/padding_medium"
                android:src="@drawable/ic_tick_check" />

            <EditText
                android:id="@+id/edt_width_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_submit"
                android:layout_marginTop="@dimen/margin_normal"
                android:ellipsize="end"
                android:hint="@string/add_some_width"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </RelativeLayout>

</LinearLayout>