<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:background="@android:color/transparent">

    <TextView
            android:id="@+id/txv_tittle"
            android:layout_width="match_parent"
            android:text="@string/you_want_to_enhance_the_routing"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_xxlarge"
            android:fontFamily="@font/frutiger_lt_bold"
            android:layout_height="wrap_content"/>


    <LinearLayout
            android:layout_below="@id/txv_tittle"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btn_yes"
                android:background="@drawable/btn_ripple"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_normal"
                android:text="@string/yes"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frutiger_lt_bold"
                android:layout_marginEnd="@dimen/padding_minor"
                tools:ignore="ButtonStyle"/>
        <Button
                android:id="@+id/btn_no"
                android:background="@drawable/btn_ripple"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_normal"
                android:text="@string/no"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/frutiger_lt_bold"
                android:layout_marginStart="@dimen/padding_minor"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle"/>
    </LinearLayout>
</RelativeLayout>