<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_xxx_large"
        android:layout_height="match_parent">
    <LinearLayout
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/text_xlarge"
              android:textColor="@android:color/black"
              android:fontFamily="@string/ft_ultra_black_font"
              android:text="@string/name"/>

    <EditText
            android:id="@+id/edt_name"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/padding_minor"
            android:paddingEnd="@dimen/padding_minor"
            android:paddingTop="@dimen/padding_xlarge"
            android:paddingBottom="@dimen/padding_xlarge"
            android:textColorHint="@color/colorTextGray"
            android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/text_xlarge"
              android:textColor="@android:color/black"
              android:fontFamily="@string/ft_ultra_black_font"
              android:text="@string/email"
              android:layout_marginTop="@dimen/margin_normal"/>

    <EditText
            android:id="@+id/edt_email"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_minor"
            android:paddingEnd="@dimen/padding_minor"
            android:paddingTop="@dimen/padding_xlarge"
            android:paddingBottom="@dimen/padding_xlarge"
            android:textColorHint="@color/colorTextGray"
            android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/text_xlarge"
              android:textColor="@android:color/black"
              android:fontFamily="@string/ft_ultra_black_font"
              android:text="@string/FEEDBACK"
              android:layout_marginTop="@dimen/margin_normal"/>

    <EditText
            android:id="@+id/edt_feedback"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:hint="@string/FEEDBACK"
            android:inputType="text"
            android:paddingStart="@dimen/padding_minor"
            android:paddingEnd="@dimen/padding_minor"
            android:paddingTop="@dimen/padding_xlarge"
            android:paddingBottom="@dimen/padding_xlarge"
            android:textColorHint="@color/colorTextGray"
            android:layout_height="wrap_content"/>


        <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:background="@drawable/btn_ripple"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:textColor="@color/colorWhite"
                android:text="@string/send"
                android:layout_height="wrap_content"/>
</LinearLayout>
</ScrollView>

